WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
157951
JSBench regression: CodeBlock linking always copies the symbol table
https://bugs.webkit.org/show_bug.cgi?id=157951
Summary
JSBench regression: CodeBlock linking always copies the symbol table
Geoffrey Garen
Reported
2016-05-20 11:53:50 PDT
JSBench regression: CodeBlock linking always copies the symbol table
Attachments
Patch
(2.78 KB, patch)
2016-05-20 11:55 PDT
,
Geoffrey Garen
saam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2016-05-20 11:55:46 PDT
Created
attachment 279493
[details]
Patch
Saam Barati
Comment 2
2016-05-20 11:59:05 PDT
Comment on
attachment 279493
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=279493&action=review
r=me
> Source/JavaScriptCore/bytecompiler/BytecodeGenerator.cpp:1673 > + ASSERT(var.symbolTableConstantIndex());
Style: I think its nicer to put asserts validating inputs before we assign something to the input.
Geoffrey Garen
Comment 3
2016-05-20 12:12:00 PDT
Committed
r201221
: <
http://trac.webkit.org/changeset/201221
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug